force-app/main/default/objects/Aprimo_DAM_Config__mdt/Aprimo_DAM_Config__mdt.object-meta.xml
<CustomObject>
    <label>Aprimo DAM Config</label>
    <pluralLabel>Aprimo DAM Configs</pluralLabel>
</CustomObject>