force-app/main/default/objects/Aprimo_DAM_Config__mdt/fields/Dialog_Mode__c.field-meta.xml
<CustomField>
    <fullName>Dialog_Mode__c</fullName>
    <description>Selector button placement: 'default' or 'fullscreen'.</description>
    <label>Dialog Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>