force-app/main/default/objects/Aprimo_DAM_Config__mdt/fields/Facets__c.field-meta.xml
<CustomField>
    <fullName>Facets__c</fullName>
    <description>Comma-separated facet names; blank disables facets.</description>
    <label>Facets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>