force-app/main/default/objects/Aprimo_DAM_Config__mdt/fields/Instance_Key__c.field-meta.xml
<CustomField>
    <fullName>Instance_Key__c</fullName>
    <description>Matches ConnectApi's provider instanceKey, passed to the LWC via context.</description>
    <label>Instance Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>