force-app/main/default/objects/Aprimo_DAM_Config__mdt/fields/Search_Expression__c.field-meta.xml
<CustomField>
    <fullName>Search_Expression__c</fullName>
    <description>Base limitingSearchExpression. Must retain the haspublicuri predicate for publicuri to return.</description>
    <label>Search Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>