force-app/main/default/objects/Aprimo_DAM_Config__mdt/fields/Tenant_URL__c.field-meta.xml
<CustomField>
    <fullName>Tenant_URL__c</fullName>
    <description>Selector base, e.g. https://yourtenant.dam.aprimo.com (not the CDN).</description>
    <label>Tenant URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>